# gravityModelling

./: .gitignore  CMakeLists.txt  main.cpp
include/: LinSpace1D.h  Model.hpp  ObservedAnomaly1D.h  Population.hpp  Shape2D.h  Sphere.h
src/: LinSpace1D.cpp  ObservedAnomaly1D.cpp  Shape2D.cpp  Sphere.cpp
